--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,10 +1,3 @@
-/*:root{*/
-/*    --darkTheme: #093545;*/
-/*    --lightTheme: #E5E5E5;*/
-/*    --btnColor: #20DF7F;*/
-/*    --inputColor: rgba(164, 164, 164, 0.23);*/
-/*}*/
-
 .textDark{
     color: white;
     transition: all 0.5s;
@@ -38,19 +31,8 @@
 
 .LoginPage {
     margin-top: -1.6%;
-    /*width: 100%;*/
-    /*height: 100vh;*/
-    /*background: var(--darkTheme) url("../../assets/Vectors.png") no-repeat 0 82.3vh;*/
-    /*background-size: 100% auto;*/
-    /*font-weight: 212;*/
-    /*transition: all 0.5s;*/
+    min-height: 110vh;
 }
-
-/*.LoginPageLight{*/
-/*    background: var(--lightTheme) url("../../assets/Vector2.png") no-repeat 0 82.3vh;*/
-/*    background-size: 100% auto;*/
-/*    transition: all 0.5s;*/
-/*}*/
 
 h1{
     text-align: center;
